--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "expo": "^50.0.14",
     "expo-camera": "~14.1.1",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "mime": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.8.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.6.2",
