--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.11.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-ratings": "^8.1.0",
